# wisdom-cpp-demo

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/wisdom/engine/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello.c  native-lib.cpp
app/src/main/java/com/wisdom/engine/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/wisdom/engine/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
